overlays/production/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  annotations:
    argocd.argoproj.io/sync-wave: "4"
  name: drova-app
  namespace: drova
spec:
  parentRefs:
    - name: envoy-gateway
      namespace: envoy-gateway
      sectionName: https
  hostnames:
    - "drova.timourhomelab.org"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /ws/chat
      backendRefs:
        - name: chat-service
          port: 8084
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: api-gateway
          port: 8081
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: drova-jaeger
  namespace: drova
spec:
  parentRefs:
    - name: envoy-gateway
      namespace: envoy-gateway
      sectionName: https
  hostnames:
    - "jaeger.drova.timourhomelab.org"
  rules:
    - backendRefs:
        - name: jaeger
          port: 16686
